# Algorthmic-Backtester-Studio

./: .gitignore  DEPLOYMENT.md  LICENSE  ML_Project.py  README.md  backend_api.py  backtester_main.py  package-lock.json  pyproject.toml  requirements.docx  requirements.txt  start_app.bat  start_app.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
stubs/ta/: __init__.pyi
tests/: Test_1.py  test_api.py  test_bollinger.py  test_connection.py  test_deployment.py  test_yfinance.py
