[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-trading-project"
version = "1.0.0"
description = "ML Trading Project with Technical Analysis"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "yfinance",
    "matplotlib",
    "ta",
    "xgboost",
    "scikit-learn",
    "numpy",
    "scipy"
]

[tool.pyright]
include = ["*.py"]
exclude = [".venv", "__pycache__"]
typeCheckingMode = "off"
reportMissingImports = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportMissingTypeArgument = false
reportUntypedFunctionDecorator = false
reportUntypedClassDecorator = false
reportUntypedBaseClass = false
reportUntypedNamedTuple = false
reportPrivateUsage = false
reportConstantRedefinition = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportInconsistentConstructor = false
reportOverlappingOverloads = false
reportMissingSuperCall = false
reportDuplicateImport = false
reportUnnecessaryCast = false
reportUnnecessaryComparison = false
reportUnnecessaryContains = false
reportUnnecessaryIsInstance = false
reportUnusedExpression = false
reportUnusedVariable = false
reportUnusedClass = false
reportUnusedFunction = false
reportUnusedImport = false
reportWildcardImportFromLibrary = false
reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalContextManager = false
reportOptionalOperand = false
reportUnboundVariable = false
reportInvalidStringEscapeSequence = false
stubPath = "stubs" 